--- a/ssm/src/main/webapp/WEB-INF/templates/index.html
+++ b/ssm/src/main/webapp/WEB-INF/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>首页</h1>
-<a th:href="@{/employee/page/1}">员工信息</a>
+<a th:href="@{/employee/page/1}">员工信息</a><br/>
 一个简单第二次乱入修改
 hot_fix 简单修改
 </body>
